Added some hovers

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,26 @@ h1{
     width:60%;
     transform: rotate(25deg);
 }
+
+#features{
+    padding: 7% 15%;
+}
+
+h3{
+    font-family: 'Montserrat';
+    font-weight: 600;
+}
+p{
+    color: #8f8f8f;
+}
+.feature-box{
+    text-align: center;
+    padding:5%;
+}
+.icon{
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+.icon:hover{
+    color:#ff4c6a;
+}
