--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,12 @@ h1{
     line-height: 1.5;
     color: white;
 }
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+    color: white;
+}
 .container-fluid{
     padding:3% 15%;
 }
@@ -58,4 +64,30 @@ p{
 }
 .icon:hover{
     color:#ff4c6a;
+}
+
+
+/* testimonials */
+#testimonials{
+    text-align: center;
+    background-color: #ef8172;
+    color: white;
+}
+.testimonial-image{
+    width:10%;
+    border-radius: 50%;
+}
+
+/* press section */
+#press{
+    text-align: center;
+    background-color: #ef8172;
+}
+.press-logo{
+    width:15%;
+    margin:20px;
+    margin-bottom: 50px;
+}
+.carousel-item{
+    padding:7% 15%; ;
 }
