--- a/css/styles.css
+++ b/css/styles.css
@@ -41,10 +41,13 @@ h2{
 .phone{
     width:60%;
     transform: rotate(25deg);
+    position: absolute;
 }
 
 #features{
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
 }
 
 h3{
