--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ h2{
 }
 .container-fluid{
     padding:3% 15%;
+    padding-bottom: 9%;
 }
 
 .navbar{
@@ -42,6 +43,7 @@ h2{
     width:60%;
     transform: rotate(25deg);
     position: absolute;
+    right:20%;
 }
 
 #features{
